package sparks.webui.entity

trait EditorControl {

  def complete(): Unit

}
